# LOPI

./: README.md  lopi.cabal
src/Eu/Fittest/: Abstraction.hs  CrossCheck.hs  Data.hs  EventRewriting.hs  Filter.hs  Fittest2SimpleLogParser.hs  Main.hs  Options.hs  RPEvolutionInference.hs  RPInferencer.hs  RPInferencer_old.hs  WitnessSetParser.hs
src/Eu/Fittest/Pretty/: Events.hs
test/: flexstore3_0.99.pat  flexstore4_0.99.pat  flexstore5_2.pat
test/com_pat/: comm.slog
test/mutation/: flexstore5_0.99.pat  rules.pat  test1.dic  test1.lox  test2.dic  test2.lox
test/performance/: lopi.aux  lopi.hp  lopi.prof  lopi.ps  rrules.pat  rruls.pat  test2.slog  test3.slog
