name:          lopi
version:       1.0
synopsis:      LOPI: LOg Patern Inference and rewriting tool
category:      Testing
stability:     Experimintal
copyright:     Utrecht University
author:        Alexander Elyasov <A.Elyasov@uu.nl>
license:       BSD3
cabal-version: >= 1.8
build-type:    Simple	


library
  build-depends: base >= 4, 
                 hashable >= 1.2.0.5, 
                 uu-parsinglib >= 2.7.4	     
  exposed-modules: Eu.Fittest.WitnessSetParser, Eu.Fittest.Data
  hs-source-dirs: src
  ghc-options: -O1 -rtsopts=all

executable lopi
  build-depends: base >= 4, 
                 containers >= 0.4, 
                 filepath >= 1.3.0.0, 
                 text >= 0.11.2.3, 
                 ListLike >= 3.1.7.1, 
                 haslog >= 1.2, 
                 pretty >= 1.1.1.0, 
                 safe >= 0.3.3, 
                 primitive >= 0.5.0.1, 
                 deepseq >= 1.3.0.0, 
                 directory >= 1.1.0.2, 
                 hashtables >= 1.0.1.8, 
                 bytestring >= 0.10.0.0, 
                 hashable >= 1.2.0.5, 
                 fittest-oracle-report >= 1.0,
                 regex-posix >= 0.95.2,
                 uu-parsinglib >= 2.7.4	     

  main-is: Eu/Fittest/Main.hs
  hs-source-dirs: src
  ghc-options: -O2 -rtsopts 
  	       -- -prof -auto-all -caf-all
               -static -optc-static -optl-static -optl-pthread 
  -- -rtsopts=all -prof
  -- add this options to build static binary
  -- -static -optc-static -optl-static -optl-pthread

  -- replace attoparsec with uu-parsinglib and vice-versa.
  -- uu-parsinglib >= 2.7.4